feat: Criação do componente Loading e SearchResult, mudanças de layout, correção na função moveBook, mudança de animação, refatoração de código e ajustes no layout

--- a/src/styles/my-reads.css
+++ b/src/styles/my-reads.css
@@ -14,6 +14,10 @@ body {
   min-height: 100vh;
 }
 
+.width-100 {
+  width: 100%;
+}
+
 .flex-collumn {
   display: flex;
   flex-wrap: wrap;
@@ -69,8 +73,19 @@ body {
 
 .search-section {
   width: 100%;
-  padding-top: 30px;
+  padding: 30px;
   background-color: #81ECEC;
+}
+
+.error-section {
+  font-size: 30px;
+  color: #777;
+  text-align: center;
+}
+
+.search-result-section {
+  width: 100%;
+  padding: 30px;
 }
 
 .to-read {
@@ -83,18 +98,6 @@ body {
 
 .read {
   background-color: #8181EC;
-}
-
-.to-read:hover {
-  transition: background-color 0.5s;
-}
-
-.reading:hover {
-  transition: background-color 0.5s;
-}
-
-.read:hover {
-  transition: background-color 0.5s;
 }
 
 .button-section {
@@ -220,7 +223,7 @@ body {
 }
 
 .search-bar {
-  width: 80%;
+  width: 100%;
   height: 50px;
   padding: 30px;
   font-size: 20px;
@@ -231,4 +234,18 @@ body {
   -webkit-box-shadow: 0px 2.5px 2.5px 0px rgba(0, 0, 0, 0.25);
   -moz-box-shadow: 0px 2.5px 2.5px 0px rgba(0, 0, 0, 0.25);
   box-shadow: 0px 2.5px 2.5px 0px rgba(0, 0, 0, 0.25);
+}
+
+.erase-search {
+  top: 120px;  
+  right: 60px;
+
+  position: absolute;
+  cursor: pointer;
+  color: #858585;
+}
+
+.search-instruction {
+  font-size: 25px;
+  color: #777;
 }
